[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_mochi_theme"
authors = [{name = "yamavol"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Sphinx :: Theme",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Home = "https://github.com/cobapen/sphinx-mochi-theme"

[project.entry-points]
"sphinx.html_themes" = { sphinx_mochi_theme = "sphinx_mochi_theme" }

